# photogrammetryScanner

./: .gitignore  MvgMvs_Pipeline.py  README.md  SFM Tasks.docx  create_json.py  manualcontrol.py  process.py  send.py  serialReadTest.ino  serialtest.py  zed_intrinsics.conf
cameraRig/: cameraRig.ino
canon_calibration/: calibration.txt  calibration_data.mat
castle_output/matches/: geometric_matches  sfm_data.json
castle_output/mvs/: depth0000.dmap  depth0001.dmap  depth0002.dmap  depth0003.dmap  depth0004.dmap  depth0005.dmap  depth0006.dmap  depth0007.dmap  depth0008.dmap  depth0009.dmap  depth0010.dmap  scene.mvs
castle_output/reconstruction_sequential/: 00000000_Resection.ply  00000001_Resection.ply  00000002_Resection.ply  Reconstruction_Report.html  SfMReconstruction_Report.html  SfMStructureFromKnownPoses_Report.html  cloud_and_poses.ply  colorized.ply  initialPair.ply  robust.ply  robust_colorized.ply
datasets/handheld_test/: handheld_test.txt
ocv_sfm_c++/: CMakeLists.txt  main.cpp
online_instructions/: SfM_imageListing.desktop  camera_intrinsics_extrinsics.desktop  install_instructions_1.desktop  install_instructions_2.desktop  instructions_to_build_tutorials.desktop  ocv_cmake_command  using_ocv_cmake.desktop
openMVG_notes/: Dissecting the Camera Matrix, Part 2_ The Extrinsic Matrix ←.desktop  pose3 file.desktop
openMVG_notes/applicable_issues/: Setting photo_camera position_ · Issue #388 · openMVG_openMVG.desktop  [software_SfM] main_computeStructureFromKnownPoses · Issue #262 · openMVG_openMVG.desktop  issue with extrinsics in json.desktop
output/matches/: geometric_matches  imm00_left.desc  imm00_left.feat  imm00_right.desc  imm00_right.feat  imm01_left.desc  imm01_left.feat  imm01_right.desc  imm01_right.feat  imm02_left.desc  imm02_left.feat  imm02_right.desc  imm02_right.feat  imm03_left.desc  imm03_left.feat  imm03_right.desc  imm03_right.feat  imm04_left.desc  imm04_left.feat  imm04_right.desc  imm04_right.feat  imm05_left.desc  imm05_left.feat  imm05_right.desc  imm05_right.feat  imm06_left.desc  imm06_left.feat  imm06_right.desc  imm06_right.feat  imm07_left.desc  imm07_left.feat  imm07_right.desc  imm07_right.feat  imm08_left.desc  imm08_left.feat  (+48 more)
scan/: Instructions.txt  begin.sh  server.py
scannerMotion/: scannerMotion.ino
serialReadTest/: serialReadTest.ino
sfm_test/: 1_create_dataset.py  2_create_image_listing.py  3_test_rig_extrinsics.py  4_run_algo.py  5_point_cloud_to_open.py  RUN_SFM_DEMO.py
(+24 files in other folders)
